@@ -5,7 +5,9 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -20,7 +22,7 @@ class SystemPermissionServiceImplTest {
     void listActivePermissionsReturnsDaoActivePermissionsInOrder() throws Exception {
         SystemPermissionDAO systemPermissionDAO = mock(SystemPermissionDAO.class);
         SystemPermissionServiceImpl service = new SystemPermissionServiceImpl(systemPermissionDAO);
-        List<SystemPermissionVO> activePermissions = List.of(
+        List<SystemPermissionVO> activePermissions = Arrays.asList(
                 new SystemPermissionVO(1L, "READ", "조회", 10),
                 new SystemPermissionVO(3L, "CREATE", "등록", 20),
                 new SystemPermissionVO(5L, "EXCEL", "엑셀", 20));
@@ -29,9 +31,9 @@ class SystemPermissionServiceImplTest {
         List<SystemPermissionVO> result = service.listActivePermissions();
 
         assertEquals(activePermissions, result);
-        assertEquals(List.of(1L, 3L, 5L), result.stream()
+        assertEquals(Arrays.asList(1L, 3L, 5L), result.stream()
                 .map(SystemPermissionVO::getPermissionId)
-                .toList());
+            .collect(Collectors.toList()));
         verify(systemPermissionDAO).selectActivePermissionList();
     }
 }
